Used color vector

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <title>Portfolio - Erin Hendricks</title>
     <!-- <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
-    <link rel="icon" type="image/png" href="./public/vector.png">
+    <link rel="icon" type="image/png" href="./public/vector_color.png">
     <link rel="stylesheet" href="./public/styles.css"/>
 </head>
     <body>
         <nav id="sidenav">
-            <img type="image/png" src="./public/vector.png" id="logo">
+            <img type="image/png" src="./public/vector_color.png" id="logo">
             <a href="school">School</a>
             <a href="professional">Professional</a>
             <a href="personal">Personal</a>
